// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A SpinnerMarker A SpinnerMarker color can be changed 1`] = `
.c1 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  background-color: blue;
}

.c0 {
  -webkit-animation-duration: 1000ms;
  animation-duration: 1000ms;
  width: 6%;
  height: 20%;
  position: absolute;
  left: 48%;
  top: 40%;
  opacity: 0.25;
  -webkit-transform: rotate(20deg) translate(0,-160%);
  -ms-transform: rotate(20deg) translate(0,-160%);
  transform: rotate(20deg) translate(0,-160%);
  -webkit-animation-delay: 200ms;
  animation-delay: 200ms;
}

<div
  className="c0 c1"
/>
`;

exports[`A SpinnerMarker A SpinnerMarker radius can be changed 1`] = `
.c1 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  border-radius: 200px;
}

.c0 {
  -webkit-animation-duration: 1000ms;
  animation-duration: 1000ms;
  width: 6%;
  height: 20%;
  position: absolute;
  left: 48%;
  top: 40%;
  opacity: 0.25;
  -webkit-transform: rotate(20deg) translate(0,-160%);
  -ms-transform: rotate(20deg) translate(0,-160%);
  transform: rotate(20deg) translate(0,-160%);
  -webkit-animation-delay: 200ms;
  animation-delay: 200ms;
}

<div
  className="c0 c1"
/>
`;

exports[`A SpinnerMarker A default SpinnerMarker 1`] = `
.c1 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
}

.c0 {
  -webkit-animation-duration: 1000ms;
  animation-duration: 1000ms;
  width: 6%;
  height: 20%;
  position: absolute;
  left: 48%;
  top: 40%;
  opacity: 0.25;
  -webkit-transform: rotate(20deg) translate(0,-160%);
  -ms-transform: rotate(20deg) translate(0,-160%);
  transform: rotate(20deg) translate(0,-160%);
  -webkit-animation-delay: 200ms;
  animation-delay: 200ms;
}

<div
  className="c0 c1"
/>
`;
